I tried to add the new logo but pc said no

--- a/Digikabu.NET/Properties/Resources.resx
+++ b/Digikabu.NET/Properties/Resources.resx
@@ -117,7 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="demo" xml:space="preserve">
-    <value />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Digikabu_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Digikabu_dark.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
